# gensio-modems

./: README.md  pyproject.toml  requirements.txt  setup.py  vara_to_application.txt
.github/workflows/: publish.yml
examples/: accept.py  pipe.py  set-levels.sh  set-wine-output.sh  varagate.py
examples/systemd/: README.md  diregate@.service  direwolf.service  logs.service  rigctlcom@.service  set-levels.service  socat@.service  varafm.service  varagate@.service  winlink.service
src/gax25/: gutils.py  listen.py  proxy.py  vara.py  varaio.py  varalisten.py
src/gensio_modems/: ax25.py  gutils.py  listen.py  proxy.py  rmsgw.py  vara.py
